--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -165,6 +165,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="rectcut"
+			>
+			<File
+				RelativePath="..\..\..\src\libimage\RegularRectCut.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\RegularRectCut.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libimage\config.h"
 			>
