--- a/easyimage/platform/msvc2008/projects/easyimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/easyimage.vcproj
@@ -246,7 +246,7 @@
 			Name="edit"
 			>
 			<Filter
-				Name="cut"
+				Name="rect_cut"
 				>
 				<File
 					RelativePath="..\..\..\src\easyimage\RectCutCMPT.cpp"
