[ADDED] rotate image
Former-commit-id: f91c2b150e009b0b506c3fe42245348c46906d33

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -294,6 +294,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\RotateImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\RotateImage.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb\Snapshoot.cpp"
 					>
 				</File>
