[ADDED] PoseProcessResult for rect cut
Former-commit-id: 1c9449e0f184bf3a0fa232ce00bb1485c3dddfe8

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -185,6 +185,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libimage\Rect.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\RectPostProcessor.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\RectPostProcessor.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libimage\RegularRectCut.cpp"
 				>
 			</File>
