[CHANGED] symbol的搜索路径部分代码放到d2d中，anim也使用
Former-commit-id: b0464fa6acb412873fee0494d8146e8daa0051bb

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -832,6 +832,26 @@
 						>
 					</File>
 				</Filter>
+				<Filter
+					Name="searcher"
+					>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\SearcherPathMgr.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\SearcherPathMgr.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\SymbolSearcher.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\drag2d\dataset\SymbolSearcher.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="bv"
