[CHANGED] 重构packer的合图算法
Former-commit-id: 479a7faa412ee1ca61dc3dc96970c96cb8a871dc

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1429,6 +1429,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\math_common.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\Matrix.cpp"
 					>
 				</File>
