[CHANGED] 提取出pack算法放到libpacker中
Former-commit-id: 1ba84aa25c30ab07bbc2dd75e8131dd253160867

--- a/easypacker/platform/msvc2008/projects/easypacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/easypacker.vcproj
@@ -218,6 +218,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\easypacker\MaxRectsBinaryArrange.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\easypacker\MaxRectsBinaryArrange.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\easypacker\RectBinArrange.cpp"
 				>
 			</File>
