[ADDED] fix rotate trim to easydb
Former-commit-id: fc0833bd8cceab1ef1ffa6f0539f266a58ee20ea

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -386,6 +386,22 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easydb_cl\FixJsonBase.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixJsonBase.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixRotateTrimJson.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easydb_cl\FixRotateTrimJson.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easydb_cl\FixSpriteColor.cpp"
 					>
 				</File>
