[ADDED] regular rect pack输出
Former-commit-id: 663a859231800f93c7246732e0fa47e49c27bbdd

--- a/easypacker/platform/msvc2008/projects/libpacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/libpacker.vcproj
@@ -152,14 +152,26 @@
 		<Filter
 			Name="extend"
 			>
-			<File
-				RelativePath="..\..\..\src\libpacker\RegularRectPack.cpp"
+			<Filter
+				Name="regular_rect"
 				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\libpacker\RegularRectPack.h"
-				>
-			</File>
+				<File
+					RelativePath="..\..\..\src\libpacker\GenRegularRectImage.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libpacker\GenRegularRectImage.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libpacker\RegularRectPack.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libpacker\RegularRectPack.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="dataset"
