--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ shootbubble/platform/msvc2008/shootbubble
 
 easy3d/platform/msvc2008/easy3d
 easyphysics/platform/msvc2008/easyphysics
+easyrender/platform/msvc2008/easyrender
 easysketch/platform/msvc2008/easysketch
 easysketch/platform/msvc2008/libsketch
 easyterrain/platform/msvc2008/easyterrain
