[ADDED] test multithread load texture
Former-commit-id: 8e5c923b70201b13d2ed305c2d6f8cc5e719daf8

--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -309,6 +309,18 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="test"
+			>
+			<File
+				RelativePath="..\..\..\src\libcomplex\MyThread.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\MyThread.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
