[ADDED] scale image for easydb
Former-commit-id: 02981d570069c91d8de2c94dffab7ce0b9504c70

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -302,14 +302,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\easydb_cl\RotateImage.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\easydb_cl\RotateImage.h"
-					>
-				</File>
-				<File
 					RelativePath="..\..\..\src\easydb\Snapshoot.cpp"
 					>
 				</File>
@@ -362,6 +354,26 @@
 					</File>
 					<File
 						RelativePath="..\..\..\src\easydb_cl\OutlineToPolygon.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="transform"
+					>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\RotateImage.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\RotateImage.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\ScaleImage.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\ScaleImage.h"
 						>
 					</File>
 				</Filter>
