--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -225,6 +225,34 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="render"
+			>
+			<File
+				RelativePath="..\..\..\src\libimage\LanczosResamplingShader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\LanczosResamplingShader.frag"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\LanczosResamplingShader.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\LanczosResamplingShader.vert"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\NormalSpriteShader.frag"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\NormalSpriteShader.vert"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libimage\config.h"
 			>
