--- a/raytracer/platform/msvc2008/projects/raytracer.vcproj
+++ b/raytracer/platform/msvc2008/projects/raytracer.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src\raytracer;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\raytracer\src;..\..\..\..\easy3d\src\easy3d"
+				AdditionalIncludeDirectories="..\..\..\src\raytracer;..\..\..\src\libraytracer;..\..\..\..\drag2d\platform\msvc2008\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src\raytracer;..\..\..\..\drag2d\src\common;..\..\..\..\drag2d\src\drag2d;..\..\..\..\drag2d\platform\msvc2008\include;&quot;..\..\..\..\drag2d\src\common\lua-5.2.3\src&quot;;..\..\..\..\easycomplex\src;..\..\..\..\raytracer\src;..\..\..\..\easy3d\src\easy3d"
+				AdditionalIncludeDirectories="..\..\..\src\raytracer;..\..\..\src\libraytracer;..\..\..\..\drag2d\platform\msvc2008\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -182,6 +182,42 @@
 	<References>
 	</References>
 	<Files>
+		<File
+			RelativePath="..\..\..\src\raytracer\App.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\App.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\Canvas.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\Canvas.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\Frame.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\Frame.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\Pixel.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\Thread.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\raytracer\Thread.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
