[ADDED] point light
Former-commit-id: ef0466266f02ad03d0547ce92ea47df799e18242

--- a/raytracer/platform/msvc2008/projects/libraytracer.vcproj
+++ b/raytracer/platform/msvc2008/projects/libraytracer.vcproj
@@ -228,6 +228,14 @@
 				RelativePath="..\..\..\src\libraytracer\lights\Light.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\lights\PointLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libraytracer\lights\PointLight.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="utilities"
