--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -320,6 +320,14 @@
 				RelativePath="..\..\..\src\libcomplex\MyThread.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\RectCutLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libcomplex\RectCutLoader.h"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
