[ADDED] image clip check duplicate
Former-commit-id: 6342035ee2e6e205ef02344fdf329a88882c3299

--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -265,6 +265,18 @@
 				</File>
 			</Filter>
 		</Filter>
+		<Filter
+			Name="process"
+			>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageClip.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImageClip.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libimage\config.h"
 			>
