--- a/easyimage/platform/msvc2008/projects/libimage.vcproj
+++ b/easyimage/platform/msvc2008/projects/libimage.vcproj
@@ -277,6 +277,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libimage\ImagePack.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libimage\ImagePack.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libimage\ImageTrim.cpp"
 				>
 			</File>
