[ADDED] regular rect打包解包用二进制
Former-commit-id: 459815d04f4d4d8da561bf6c58656ab4a128b4fc

--- a/easypacker/platform/msvc2008/projects/libpacker.vcproj
+++ b/easypacker/platform/msvc2008/projects/libpacker.vcproj
@@ -156,6 +156,14 @@
 				Name="regular_rect"
 				>
 				<File
+					RelativePath="..\..\..\src\libpacker\GenRegularRectBinary.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libpacker\GenRegularRectBinary.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libpacker\GenRegularRectImage.cpp"
 					>
 				</File>
