[ADDED] load uniform
Former-commit-id: 709b2cd50c65b3fa6ee0a4f4a8485a9880ce28b9

--- a/easyshader/platform/msvc2008/projects/libshader.vcproj
+++ b/easyshader/platform/msvc2008/projects/libshader.vcproj
@@ -217,6 +217,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="fileio"
+			>
+			<File
+				RelativePath="..\..\..\src\libshader\FileIO.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libshader\FileIO.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\libshader\config.h"
 			>
