[ADDED] 控件调整uniform值
Former-commit-id: c8a2f9c15fe24bcf263ca7db891ca4eb8ba28710

--- a/easyshader/platform/msvc2008/projects/libshader.vcproj
+++ b/easyshader/platform/msvc2008/projects/libshader.vcproj
@@ -195,6 +195,22 @@
 					RelativePath="..\..\..\src\libshader\ToolbarPanel.h"
 					>
 				</File>
+				<Filter
+					Name="slider"
+					>
+					<File
+						RelativePath="..\..\..\src\libshader\SliderCtrl.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libshader\SliderCtrl.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libshader\SliderItem.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 		</Filter>
 		<Filter
