[ADDED] time for shader
Former-commit-id: ec35e4d7efb65d266d065858dc11f5d0610c6481

--- a/easyshader/platform/msvc2008/projects/libshader.vcproj
+++ b/easyshader/platform/msvc2008/projects/libshader.vcproj
@@ -156,6 +156,14 @@
 				Name="stage"
 				>
 				<File
+					RelativePath="..\..\..\src\libshader\SelectSpritesOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libshader\SelectSpritesOP.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libshader\StageCanvas.cpp"
 					>
 				</File>
